- refactoring: fixed method filterAvailableCars