@@ -84,6 +84,7 @@ public class CarServiceImpl implements CarService {
     public List<CarResponseDto> getCarsByBrand(String brand) {
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getBrand().equalsIgnoreCase(brand.trim()))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -93,6 +94,7 @@ public class CarServiceImpl implements CarService {
     public List<CarResponseDto> getCarsByModel(String model) {
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getModel().equalsIgnoreCase(model.trim()))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -102,6 +104,7 @@ public class CarServiceImpl implements CarService {
     public List<CarResponseDto> getCarsByYear(int year) {
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getYear() == year)
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -111,6 +114,7 @@ public class CarServiceImpl implements CarService {
     public List<CarResponseDto> getCarsByType(CarType type) {
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getType().equals(type))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -120,6 +124,7 @@ public class CarServiceImpl implements CarService {
     public List<CarResponseDto> getCarsByFuelType(CarFuelType fuelType) {
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getFuelType().equals(fuelType))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -129,6 +134,7 @@ public class CarServiceImpl implements CarService {
     public List<CarResponseDto> getCarsByTransmissionType(CarTransmissionType transmissionType) {
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getTransmissionType().equals(transmissionType))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -138,6 +144,7 @@ public class CarServiceImpl implements CarService {
     public List<CarResponseDto> getCarsByCarStatus(CarStatus carStatus) {
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> Objects.nonNull(car.getCarStatus()) && car.getCarStatus().equals(carStatus))
                 .map(carMappingService::mapEntityToDto)
                 .toList();
@@ -147,6 +154,7 @@ public class CarServiceImpl implements CarService {
     public List<CarResponseDto> getCarsByDayRentalPrice(BigDecimal minDayRentalPrice, BigDecimal maxDayRentalPrice) {
         return carRepository.findAll()
                 .stream()
+                .filter(Car::isActive)
                 .filter(car -> car.getDayRentalPrice().compareTo(minDayRentalPrice) >= 0 &&
                         car.getDayRentalPrice().compareTo(maxDayRentalPrice) <= 0)
                 .sorted(Comparator.comparing(Car::getDayRentalPrice))
@@ -191,7 +199,7 @@ public class CarServiceImpl implements CarService {
     @Override
     public CarResponseDto restoreCar(Long id) {
         Car restoredCar = carRepository.findById(id).orElseThrow(() -> new RuntimeException("Car with id " + id + " not found"));
-        if(restoredCar.isActive()) {
+        if (restoredCar.isActive()) {
             throw new RestApiException("Car with id " + id + " is already active");
         }
         restoredCar.setActive(true);
@@ -205,37 +213,75 @@ public class CarServiceImpl implements CarService {
     public List<CarResponseDto> getAllAvailableCarsByDates(
             LocalDateTime startDateTime,
             LocalDateTime endDateTime) {
+        if (startDateTime == null || endDateTime == null) {
+            throw new RestApiException("Start and end dates cannot be null");
+        }
+        if (startDateTime.isBefore(LocalDateTime.now())) {
+            throw new RestApiException("Start date must be today or in the future");
+        }
+        if (endDateTime.isBefore(LocalDateTime.now())) {
+            throw new RestApiException("Start date must be today or in the future");
+        }
+        if (endDateTime.isBefore(startDateTime.plusDays(1))) {
+            throw new RestApiException("End date must be at least one full day after the start date");
+        }
         return carRepository.findAll()
                 .stream()
-                .filter((car -> car.isActive() && car.getCarStatus() == CarStatus.AVAILABLE))
-                .filter(car -> bookingRepository.findAllByCarId(car.getId()).stream()
-                        .noneMatch(booking ->
-                                booking.getRentalStartDate().isBefore(endDateTime) &&
-                                        booking.getRentalEndDate().isAfter(startDateTime)
-                        )
-                )
+                //.filter(car -> car.isActive() && car.getCarStatus() == CarStatus.AVAILABLE)
+                .filter(car -> {
+                    List<Booking> bookings = bookingRepository.findAllByCarId(car.getId());
+                    if (bookings == null || bookings.isEmpty()) {
+                        return true;
+                    }
+                    return bookings.stream()
+                            .noneMatch(booking ->
+                                    booking.getRentalStartDate().isBefore(endDateTime) &&
+                                            booking.getRentalEndDate().isAfter(startDateTime)
+                            );
+                })
                 .map(carMappingService::mapEntityToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    @Transactional
     public List<CarResponseDto> filterAvailableCars(
             LocalDateTime startDateTime,
             LocalDateTime endDateTime,
-            String brand,
-            String fuelType,
-            String transmissionType,
+            List<String> brands,
+            List<String> fuelTypes,
+            List<String> transmissionTypes,
             BigDecimal minPrice,
             BigDecimal maxPrice) {
+        if (startDateTime == null || endDateTime == null) {
+            throw new RestApiException("Start and end dates cannot be null");
+        }
+        if (startDateTime.isBefore(LocalDateTime.now())) {
+            throw new RestApiException("Start date must be today or in the future");
+        }
+        if (endDateTime.isBefore(LocalDateTime.now())) {
+            throw new RestApiException("Start date must be today or in the future");
+        }
+        if (endDateTime.isBefore(startDateTime.plusDays(1))) {
+            throw new RestApiException("End date must be at least one full day after the start date");
+        }
         return getAllAvailableCarsByDates(startDateTime, endDateTime)
                 .stream()
-                .filter(car -> brand == null || car.brand().equalsIgnoreCase(brand.trim()))
-                .filter(car -> fuelType == null || car.fuelType().name().equalsIgnoreCase(fuelType.trim()))
-                .filter(car -> transmissionType == null || car.transmissionType().name().equalsIgnoreCase(transmissionType.trim()))
-                .filter(car -> minPrice == null || car.dayRentalPrice().compareTo(minPrice) >= 0)
-                .filter(car -> maxPrice == null || car.dayRentalPrice().compareTo(maxPrice) <= 0)
-                .collect(Collectors.toList());
+                .filter(car ->
+                        brands == null || brands.isEmpty() ||
+                                brands.stream().anyMatch(brand ->
+                                        brand.equalsIgnoreCase(car.brand())))
+                .filter(car ->
+                        fuelTypes == null || fuelTypes.isEmpty() ||
+                                fuelTypes.stream().anyMatch(fuelType ->
+                                        fuelType.equalsIgnoreCase(car.fuelType().name())))
+                .filter(car ->
+                        transmissionTypes == null || transmissionTypes.isEmpty() ||
+                                transmissionTypes.stream().anyMatch(transmissionType ->
+                                        transmissionType.equalsIgnoreCase(car.transmissionType().name())))
+                .filter(car ->
+                        (minPrice == null || car.dayRentalPrice().compareTo(minPrice) >= 0) &&
+                                (maxPrice == null || car.dayRentalPrice().compareTo(maxPrice) <= 0))
+                .toList();
     }
 
     @Override
